knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/texcellency__DHCLog__c/texcellency__DHCLog__c.object-meta.xml
<CustomObject>
    <description>Log object to capture diagnostic events on Definitive Healthcare Integration app.</description>
    <label>DHC Log</label>
    <nameField>
        <displayFormat>DHC-{YYMMDD}-{0000}</displayFormat>
        <label>DHCLog Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DHC Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>