knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/texcellency__DHCLog__c/fields/texcellency__Event_Time__c.field-meta.xml
<CustomField>
    <fullName>texcellency__Event_Time__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <description>Date and time on which this event occurred.</description>
    <inlineHelpText>Date and time on which this event occurred.</inlineHelpText>
    <label>Event Time</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>