knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/texcellency__DHCLog__c/fields/texcellency__Level__c.field-meta.xml
<CustomField>
    <fullName>texcellency__Level__c</fullName>
    <defaultValue>&quot;DEBUG&quot;</defaultValue>
    <description>Log message level.</description>
    <inlineHelpText>Log message level.</inlineHelpText>
    <label>Level</label>
    <length>5</length>
    <required>true</required>
    <type>Text</type>
</CustomField>