knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/texcellency__DHCLog__c/fields/texcellency__Logger__c.field-meta.xml
<CustomField>
    <fullName>texcellency__Logger__c</fullName>
    <defaultValue>&quot;DEFAULT&quot;</defaultValue>
    <description>Logger name</description>
    <inlineHelpText>Logger name.</inlineHelpText>
    <label>Logger</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>