knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/texcellency__DHCLog__c/fields/texcellency__Message__c.field-meta.xml
<CustomField>
    <fullName>texcellency__Message__c</fullName>
    <description>Log message</description>
    <inlineHelpText>Log Message</inlineHelpText>
    <label>Message</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>