knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/texcellency__DHCLog__c/listViews/texcellency__All.listView-meta.xml
<ListView>
    <fullName>texcellency__All</fullName>
    <columns>NAME</columns>
    <columns>texcellency__Event_Time__c</columns>
    <columns>texcellency__Level__c</columns>
    <columns>texcellency__Logger__c</columns>
    <columns>texcellency__Message__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>