knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/texcellency__DHCLog__c/listViews/texcellency__Detailed_View.listView-meta.xml
<ListView>
    <fullName>texcellency__Detailed_View</fullName>
    <columns>NAME</columns>
    <columns>texcellency__Level__c</columns>
    <columns>texcellency__Logger__c</columns>
    <columns>texcellency__Message__c</columns>
    <filterScope>Everything</filterScope>
    <label>Detailed View</label>
</ListView>